--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="./DS.txt" download>ds</a>
+    <a href="./updated 4th sem web manual.pdf" download>ds</a>
 
 </body>
 
