--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <a href="./updated 4th sem web manual.pdf" download>ds</a>
+    <a href="./DS.txt" download>ds</a>
+    <a href="./1.pdf" download>1</a>
+    <a href="./2.pdf" download>2</a>
 
 </body>
 
