--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-    <a href="./DS.txt" download>ds</a>
+    <a href="./DS.txt" download>py</a>
     <a href="./1.pdf" download>1</a>
     <a href="./2.pdf" download>2</a>
+    <a href="./daa.pdf" download>daa</a>
 
 </body>
 
