--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <a href="./DS.txt" download>py</a>
+    <a href="./updated 4th sem web manual.pdf" download>Web</a>
     <a href="./1.pdf" download>1</a>
     <a href="./2.pdf" download>2</a>
     <a href="./daa.pdf" download>daa</a>
