--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href="./1.pdf" download>1</a>
     <a href="./2.pdf" download>2</a>
     <a href="./daa.pdf" download>daa</a>
+    <a href="./sys32.pdf" download>daa2low</a>
 
 </body>
 
