--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="./web2.zip" download>web2</a>
     <a href="./2.pdf" download>2</a>
     <a href="./daa.pdf" download>daa</a>
-    <a href="./pypgm.zip" download>daa1</a>
+    <a href="./pypgm.zip" download>py01</a>
     <a href="./sys32.zip" download>daa2low</a>
 
 </body>
